ATLAS-2398: Perform validation after versioning apply